[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentpy"
version = "1.0.0"
description = "A simple general-purpose AI agent CLI tool with MCP support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
keywords = ["ai", "agent", "llm", "openai", "mcp", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

# No third-party runtime dependencies – only the standard library is used.
dependencies = []

[project.scripts]
agent = "agent:main"

[project.urls]
Repository = "https://github.com/wadoon/agentpy"

[tool.setuptools]
py-modules = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
